spade-tests/src/snapshots/spade_tests__compiler_state__type_of_non_existent_module_with_candidates.snap
---
source: spade-tests/src/compiler_state.rs
---

        fn sub() -> bool {
            false
        }

        pipeline(1) main(clk: clock) -> bool {
                let _ = sub();
                let x: int<10> = 0;
            reg;
                false
        }
    

main has no spade unit instance named not_a_module
  candidates:
    sub_0
